# try-kuzu

./: pyproject.toml  try-kuzu.ipynb
data/: city.csv  follows.csv  lives-in.csv  user.csv
try-kuzu/: data.kz  metadata.kz  rels.statistics
