[tool.poetry]
name = "try-kuzu"
version = "0.1.0"
description = ""
authors = ["Andreas Kollegger <akollegger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kuzu = "^0.3.2"
# llama-index-graph-stores-kuzu = "^0.1.2"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
